# SlicerFreeSurferCommands

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SlicerFreeSurferCommands.xcf
FreeSurferMRIWatershedSkullStrip/: CMakeLists.txt  FreeSurferMRIWatershedSkullStrip.py  FreeSurferMRIWatershedSkullStrip.xml
FreeSurferMRIWatershedSkullStrip/Resources/UI/: FreeSurferMRIWatershedSkullStrip.ui
FreeSurferSkullStripper/: CMakeLists.txt  FreeSurferSkullStripper.py
FreeSurferSkullStripper/Resources/UI/: FreeSurferSkullStripper.ui
FreeSurferSynthSeg/: CMakeLists.txt  FreeSurferColorLUT.ctbl  FreeSurferSynthSeg.py  README.md
FreeSurferSynthSeg/Resources/UI/: FreeSurferSynthSeg.ui
FreeSurferSynthStripSkullStrip/: CMakeLists.txt  FreeSurferSynthStripSkullStrip.py  FreeSurferSynthStripSkullStrip.xml  README.md
FreeSurferSynthStripSkullStrip/Resources/UI/: FreeSurferSynthStripSkullStrip.ui
FreeSurferSynthStripSkullStripCLI/: CMakeLists.txt  FreeSurferSynthStripSkullStripCLI.xml  README.md
FreeSurferSynthStripSkullStripScripted/: CMakeLists.txt  FreeSurferSynthStripSkullStripScripted.py  README.md
FreeSurferSynthStripSkullStripScripted/Resources/UI/: FreeSurferSynthStripSkullStripScripted.ui
